Fix scroll left-right on mobile

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -10,6 +10,11 @@
 body {
   @apply bg-black overflow-x-hidden;
   font-family: var(--font-geologica), sans-serif;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 h1,
